Registration + begin Authorize for shop

--- a/MockupActionCommandGame/appsettings.json
+++ b/MockupActionCommandGame/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
-    "ApiBaseUrl": "https://localhost:7237"
+    "ApiBaseUrl": "https://localhost:7237",
+    "SignInUrl":  "/Home/LoginPage" 
   },
   "Logging": {
     "LogLevel": {
